TOAST, CSS RESPONS, LOGO CHANGE

--- a/public/pages/home/index.html
+++ b/public/pages/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ce Abaranje - Piloted by grace. Discover our mission and join us in worship.">
-    <link rel="icon" href="./src/favicon.ico">
+    <link rel="icon" href="/src/favicon.ico">
     <link rel="stylesheet" href="/pages/home/style.css">
     <link rel="stylesheet" href="/annimations.css">
     <link rel="stylesheet" href="/root.css">
@@ -23,8 +23,7 @@
         <nav class="landing-page-navbar" aria-label="Main Navigation">
             <div class="navbar-box">
                 <div class="navbar-logo-title">
-                    <a href="#home-page" target="_self"><img src="src/pngaaa.com-147010.png" alt="Ce Abaranje Logo" title="Ce Abaranje" id="navbar-logo"></a>
-                    <a href="#home-page" target="_self"><p>CE ABARANJE</p></a>  
+                    <a href="#home-page" target="_self"><img src="src/logo.webp" alt="Ce Abaranje Logo" title="Ce Abaranje" id="navbar-logo"></a>
                 </div>
                 <ul class="navbar-list">
                     <li><a href="/" target="_self">Home</a></li>
