--- a/public/pages/login/login.html
+++ b/public/pages/login/login.html
@@ -6,7 +6,6 @@
         <meta name="description" content="Login to your account">
         <link rel="icon" href="/src/favicon.ico">
         <link rel="stylesheet" href="/pages/login/login.css">    
-        <link rel="stylesheet" href="/pages/home/style.css">
         <link rel="stylesheet" href="/annimations.css">
         <script src="https://kit.fontawesome.com/ecf5b4f981.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -14,9 +13,9 @@
         <title>Login | CeAbaranje</title>
     </head>
     <body>
+        <div id="toastBox"></div>
         <main class="login-form-body">
             <div class="login-form-sub-body">
-                <img src="../src/Pastor-Chris-Oyakhilome.jpg" alt="pastorchris.jpeg">
                 <div class="prompt-parent hidden" id="message-prompt">
                     <div class="success-prompt" >
                         <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
@@ -26,7 +25,7 @@
                 <div class="login-form-container">
                     <div class="login-form-text-container">
                         <h1>Login to your account</h1>
-                        <p>Enter your Details</p>
+                        <p>Enter your login details</p>
                     </div>
 
                     <form class="login-form" id="loginFormRequest">
