--- a/public/admin/messages/messages.html
+++ b/public/admin/messages/messages.html
@@ -495,10 +495,10 @@
                       <p>Souls Won</p>
                     </li>
                   </a>
-                  <a href="/admin/schedule-service">
+                  <a href="/admin/live-service">
                     <li class="dashboard-items">
                       <i class="fa-regular fa-calendar-days"></i>
-                      <p>Schedule Service</p>
+                      <p>Streaming</p>
                     </li>
                   </a>
                   <a href="/admin/messages">
