--- a/public/dashboard/edit-profile/edit-profile.html
+++ b/public/dashboard/edit-profile/edit-profile.html
@@ -12,13 +12,8 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
 </head>
 <body>
+  <div id="toastBox"></div>
   <main class="sub-body">
-    <div class="prompt-parent hidden" id="message-prompt">
-      <div class="success-prompt" >
-          <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
-          <h2 id="message-text"></h2>
-      </div>
-    </div>
     <main class="dashboard-sub-body">
       <nav class="vertical-navbar">
         <div class="vertical-navbar-box">
