--- a/public/dashboard/submit-report/submit-report.html
+++ b/public/dashboard/submit-report/submit-report.html
@@ -11,14 +11,9 @@
 
 </head>
 <body>
+  <div id="toastBox"></div>
   <main class="sub-body">
     <main class="dashboard-sub-body">
-      <div class="prompt-parent hidden" id="message-prompt">
-        <div class="success-prompt" >
-            <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
-            <h2 id="message-text"></h2>
-        </div>
-      </div>
       <nav class="vertical-navbar">
         <div class="vertical-navbar-box">
           <div class="nocssneeded">
