--- a/public/pages/register/register.html
+++ b/public/pages/register/register.html
@@ -12,13 +12,8 @@
     <title>CHRIST EMBASSY ABARANJE || REGISTER</title>
 </head>
 <body>
+    <div id="toastBox"></div>
     <main class="header-register">
-        <div class="prompt-parent hidden" id="message-prompt">
-            <div class="success-prompt" >
-                <i class="fa-solid fa-spinner-third fa-2xl" id="message-sign"></i>
-                <h2 id="message-text"></h2>
-            </div>
-        </div>
         <div class="register-container" id="first-form">
             <div class="register-container-text" id="register-text">
                 <h1>Create an account</h1>
@@ -304,7 +299,7 @@
                 </div>
                 <div class="registration__form">
                     <p>already have an account ? - <a href="/login">Sign in</a></p>
-                    <button type="button" class="nextformbutton" id="nextform-button">Next</button>
+                    <button type="submit" class="nextformbutton" id="nextform-button">Next</button>
                 </div>
             </form>
         </div>
@@ -505,7 +500,7 @@
                 </div>
                 <div class="registration__form2">
                     <button type="button" class="gobacktofirstform" id="back_button">Go Back</button>
-                    <button type="button" class="nextform2button" id="next_button">Next</button>
+                    <button type="submit" class="nextform2button" id="next_button">Next</button>
                 </div>
             </form>
         </div>
