--- a/public/admin/schedule-service/schedule-service.html
+++ b/public/admin/schedule-service/schedule-service.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css"/>
-    <!-- <link rel="stylesheet" href="/admin/defaultdashboard.css" /> -->
-    <link rel="stylesheet" href="../defaultdashboard.css" />
-    <!-- <link rel="stylesheet" href="/admin/schedule-service/schedule-service.css" /> -->
-    <link rel="stylesheet" href="./schedule-service.css" />
+    <!-- <link rel="stylesheet" href="../defaultdashboard.css" /> -->
+    <!-- <link rel="stylesheet" href="./schedule-service.css" /> -->
+    <link rel="stylesheet" href="/admin/defaultdashboard.css" />
+    <link rel="stylesheet" href="/admin/schedule-service/schedule-service.css" />
     <link rel="stylesheet" href="../../annimations.css" />
     <link rel="stylesheet" href="../../root.css" />
   </head>
@@ -285,7 +285,7 @@
         </section>
       </main>
     </main>
-    <script defer src="./schedule-service.js"></script>
-    <!-- <script defer src="/admin/schedule-service/schedule-service.js"></script> -->
+    <!-- <script defer src="./schedule-service.js"></script> -->
+    <script defer src="/admin/schedule-service/schedule-service.js"></script>
   </body>
 </html>
