meeting socket complete, peak, view analysis complete, status change complete

--- a/public/pages/watch/watch.html
+++ b/public/pages/watch/watch.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CeAbaranje | Watch</title>
     <link rel="icon" href="../../src/favicon.ico" />
-    <!-- <link rel="stylesheet" href="/pages/watch/watch.css" /> -->
-    <link rel="stylesheet" href="./watch.css" />
+    <link rel="stylesheet" href="/pages/watch/watch.css" />
+    <!-- <link rel="stylesheet" href="./watch.css" /> -->
     <link rel="stylesheet" href="../../annimations.css" />
     <link rel="stylesheet" href="../../root.css" />
     <script src="https://kit.fontawesome.com/ecf5b4f981.js" crossorigin="anonymous"></script>
