--- a/public/admin/schedule-service/schedule-service.html
+++ b/public/admin/schedule-service/schedule-service.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CeAbaranje || Dashboard/EditProfile</title>
     <link rel="icon" href="../src/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css"
+    />
     <!-- <link rel="stylesheet" href="../defaultdashboard.css" /> -->
     <!-- <link rel="stylesheet" href="./schedule-service.css" /> -->
     <link rel="stylesheet" href="/admin/defaultdashboard.css" />
@@ -16,6 +25,7 @@
     <link rel="stylesheet" href="../../root.css" />
   </head>
   <body>
+    <div id="toastBox"></div>
     <main class="sub-body">
       <main class="dashboard-sub-body">
         <nav class="vertical-navbar">
@@ -109,8 +119,12 @@
             <div class="empty-div"></div>
             <div class="overview">
               <!-- HERE -->
-              <form action="" class="meeting-form-container" style="display: none;">
-                <div class="form__wrapper" style="display: flex;">
+              <form
+                class="meeting-form-container"
+                id="meetingForm"
+                style="display: none"
+              >
+                <div class="form__wrapper" style="display: flex">
                   <div class="input-group">
                     <label for="title">Title</label>
                     <input
@@ -134,20 +148,25 @@
                     <div class="input-group part">
                       <label for="">Allowed-participants</label>
                       <input
-                      required
+                        required
                         type="text"
-                        name=""
+                        name="allowedParticipants"
                         placeholder="Allowed-participants"
                       />
                     </div>
-                    <hr>
+                    <hr />
                     <div class="input-group range">
                       <label for="limit">Limit (optional)</label>
                       <div class="range-group">
-                        <input type="number" id="range" value="0" title="range"/>
+                        <input
+                          type="number"
+                          id="range"
+                          value="0"
+                          title="range"
+                        />
                         <input
                           type="range"
-                          name="limit"
+                          name="participantLimit"
                           id="limit"
                           title="limit"
                           min="0"
@@ -162,7 +181,6 @@
                       required
                       type="datetime-local"
                       id="startTime"
-                      name="startTime"
                       title="start Time"
                     />
                   </div>
@@ -173,17 +191,21 @@
                       required
                       class="timepicker-ui-input"
                       id="EndTime"
-                      name="EndTime"
                       title="End TIme"
                     />
                   </div>
                 </div>
                 <div class="button__contianer">
-                  <button type="submit">Schedule</button>
+                  <button type="submit" id="newMeetingBtn">Schedule</button>
                 </div>
               </form>
               <div class="button-container">
-                <button title="Create" type="button" id="show_meeting_sch" class="">
+                <button
+                  title="Create"
+                  type="button"
+                  id="show_meeting_sch"
+                  class=""
+                >
                   <span>Create</span>
                   <!-- <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFF"><path d="M440-440H240q-17 0-28.5-11.5T200-480q0-17 11.5-28.5T240-520h200v-200q0-17 11.5-28.5T480-760q17 0 28.5 11.5T520-720v200h200q17 0 28.5 11.5T760-480q0 17-11.5 28.5T720-440H520v200q0 17-11.5 28.5T480-200q-17 0-28.5-11.5T440-240v-200Z"/></svg> -->
                   <i class="fa-solid fa-plus"></i>
@@ -193,7 +215,7 @@
                 <div class="table__parent__container">
                   <p>Live meetings</p>
                   <div class="table-container">
-                    <table>
+                    <table id="live-meetings-table" class="__table">
                       <thead>
                         <tr>
                           <th>Title</th>
@@ -206,16 +228,14 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
-                          <td class="view">New Stream</td>
-  
-                          <td>tue, Oct 8, 2024 5:00 AM</td>
-                          <td>None</td>
-                          <td>All</td>
-                          <td class="">scheduled</td>
-                          <td>--</td>
-                          <!-- <td></td> -->
+                        <tr class="skeleton">
+                          <td class="skeleton" rowspan="50"></td>
+                          <td class="skeleton"></td>
+                          <td class="skeleton"></td>
+                          <td class="skeleton"></td>
+                          <td class="skeleton"></td>
                         </tr>
+                        <!-- Data from script -->
                       </tbody>
                     </table>
                   </div>
@@ -223,7 +243,7 @@
                 <div class="table__parent__container">
                   <p>Upcoming meetings</p>
                   <div class="table-container">
-                    <table>
+                    <table id="upcoming-meetings-table" class="__table">
                       <thead>
                         <tr>
                           <th>Title</th>
@@ -236,15 +256,14 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
-                          <td class="view">New Stream</td>
-                          <td>tue, Oct 8, 2024 5:00 AM</td>
-                          <td>None</td>
-                          <td>All</td>
-                          <td class="">scheduled</td>
-                          <td>--</td>
-                          <!-- <td></td> -->
+                        <tr class="skeleton">
+                          <td class="skeleton" rowspan="50"></td>
+                          <td class="skeleton"></td>
+                          <td class="skeleton"></td>
+                          <td class="skeleton"></td>
+                          <td class="skeleton"></td>
                         </tr>
+                        <!-- Data from script -->
                       </tbody>
                     </table>
                   </div>
@@ -253,7 +272,7 @@
               <div class="table__parent__container bottom">
                 <p>Meetings</p>
                 <div class="table-container">
-                  <table>
+                  <table id="main-meetings-table" class="__table">
                     <thead>
                       <tr>
                         <th>Title</th>
@@ -266,16 +285,14 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td class="view">New Stream</td>
-  
-                        <td>tue, Oct 8, 2024 5:00 AM</td>
-                        <td>None</td>
-                        <td>All</td>
-                        <td class="">scheduled</td>
-                        <td>--</td>
-                        <!-- <td></td> -->
+                      <tr class="skeleton">
+                        <td class="skeleton" rowspan="50"></td>
+                        <td class="skeleton"></td>
+                        <td class="skeleton"></td>
+                        <td class="skeleton"></td>
+                        <td class="skeleton"></td>
                       </tr>
+                      <!-- DATA FROM SCRIPT -->
                     </tbody>
                   </table>
                 </div>
