--- a/public/pages/watch/watch.html
+++ b/public/pages/watch/watch.html
@@ -91,7 +91,7 @@
             <div class="watch-container">
                 <video id="my-video" class="video-js vjs-default-skin" controls preload="auto" width="640" height="360"
                     data-setup="{}">
-                    <source src="http://localhost:5050/hls/temp.m3u8" type="application/x-mpegURL" />
+                    <source src="http://localhost:5050/hls/.m3u8" type="application/x-mpegURL" />
                 </video>
                 <h1>Sunday Service</h1>
             </div>
