CSS OVERFLOW FIX

--- a/public/admin/overview/overview.html
+++ b/public/admin/overview/overview.html
@@ -12,7 +12,9 @@
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/admin/defaultdashboard.css">
+  <link rel="stylesheet" href="../defaultdashboard.css">
   <link rel="stylesheet" href="/admin/overview/overview.css">
+  <link rel="stylesheet" href="./overview.css">
   <link rel="stylesheet" href="/annimations.css">
   <link rel="stylesheet" href="/root.css">
   <script defer src="/admin/overview/overview.js"></script>
