--- a/public/admin/schedule-service/schedule-service.html
+++ b/public/admin/schedule-service/schedule-service.html
@@ -17,8 +17,8 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css"
     />
-    <!-- <link rel="stylesheet" href="../defaultdashboard.css" /> -->
-    <!-- <link rel="stylesheet" href="./schedule-service.css" /> -->
+    <link rel="stylesheet" href="../defaultdashboard.css" />
+    <link rel="stylesheet" href="./schedule-service.css" />
     <link rel="stylesheet" href="/admin/defaultdashboard.css" />
     <link rel="stylesheet" href="/admin/schedule-service/schedule-service.css" />
     <link rel="stylesheet" href="../../annimations.css" />
@@ -302,7 +302,7 @@
         </section>
       </main>
     </main>
-    <!-- <script defer src="./schedule-service.js"></script> -->
+    <script defer src="./schedule-service.js"></script>
     <script defer src="/admin/schedule-service/schedule-service.js"></script>
   </body>
 </html>
