Admin Page 100% complete

--- a/public/dashboard/edit-profile/edit-profile.html
+++ b/public/dashboard/edit-profile/edit-profile.html
@@ -74,8 +74,8 @@
       <section class="dashboard-content">
         <div class="dashboard-content-box">
           <div class="dashboard-content-title">
-            <button class="drawerIcon" id="DrawerIcon">≡</button>
-            <a href="/" class="go-back">
+            <button type="button" class="drawerIcon" id="DrawerIcon">≡</button>
+            <a href="/" class="go-back" title="go-back">
               <!-- <i class="fa-solid fa-arrow-left"></i> -->
               <i class="fa-regular fa-solid fa-house"></i>
             </a>
@@ -131,6 +131,7 @@
                     <option value="Senior-Cell-leader">Senior Cell Leader</option>
                     <option value="Cell-leader">Cell Leader</ option>
                     <option value="Departmental-Head">Departmental Head</option>
+                    <option value="Minister-in-training">Minister in training</option>
                     <option value="Haven-Govenor">Haven Governor</option>
                     <option value="Member">Member</option>
                   </select>
@@ -154,7 +155,6 @@
                 </div>
                 <button type="submit" id="updateuserbutton" class="updatebutton">Update</button>
               </div>
-
             </form>
           </div>
         </div>
