--- a/public/admin/addacell/addacell.html
+++ b/public/admin/addacell/addacell.html
@@ -20,9 +20,7 @@
   </head>
 
   <body>
-    <div class="loader">
-      <div class="inner-loader"></div>
-    </div>
+    <div id="toastBox"></div>
     <main class="sub-body">
       <div class="prompt-parent hidden" id="message-prompt">
         <div class="success-prompt">
