Api Endpoints change

--- a/public/pages/register/register.html
+++ b/public/pages/register/register.html
@@ -318,12 +318,12 @@
                     <div class="input-groups">
                         <select name="churches" id="churches" required>
                             <option value="" hidden>Select your church</option>
-                            <option value="CeAbaranjeGroup">CHRIST EMBASSY Abaranje Group</option>
-                            <option value="CeAtan"  >CHRIST EMBASSY Atan</option>
-                            <option value="CeNewigando"  >CHRIST EMBASSY NEW IGANDO</option>
-                            <option value="Cekingeternal"  >CHRIST EMBASSY KINGETERNAL</option>
-                            <option value="CeAbaranje2"  >CHRIST EMBASSY ABARANJE2</option>
-                            <option value="xxxxxxx"  >xxxxxxxxxxxxxxxxxxxxxxxxx</option>
+                            <option value="ChristEmbassyAbaranje">CHRIST EMBASSY Abaranje Group</option>
+                            <option value="ChristEmbassyAtan"  >CHRIST EMBASSY Atan</option>
+                            <option value="ChristEmbassyNewigando"  >CHRIST EMBASSY NEW IGANDO</option>
+                            <option value="ChristEmbassykingeternal"  >CHRIST EMBASSY KINGETERNAL</option>
+                            <option value="ChristEmbassyAbaranje2"  >CHRIST EMBASSY ABARANJE2</option>
+                            <option value="ChristEmbassyLoveArena"  >Christ Embassy Love Arena</option>
                             <option value="other">other</option>
                         </select>
                         <label for="churches">Select your Church</label>
