--- a/public/admin/addacell/addacell.html
+++ b/public/admin/addacell/addacell.html
@@ -157,6 +157,7 @@
                     >
                       <option value="NoSelect" hidden>Select an option</option>
                       <option value="CO-ORDINATOR">CO-ORDINATOR</option>
+                      <option value="MINISTER-IN-TRAINING">MINISTER IN TRAINING</option>
                       <option value="PCF">PCF LEADER</option>
                       <option value="SENIOR-CELL">SENIOR-CELL LEADER</option>
                       <option value="CELL">CELL LEADER</option>
