--- a/public/admin/view-cell-reports/view-cell-reports.html
+++ b/public/admin/view-cell-reports/view-cell-reports.html
@@ -23,6 +23,9 @@
     <link rel="stylesheet" href="../../root.css" />
   </head>
   <body>
+    <div id="toastBox">
+      
+    </div>
     <main class="sub-body">
       <div class="hidden reports-parent">
         <div class="reports-wrapper">
