Users Dashboar 100% complete

--- a/public/admin/addacell/addacell.html
+++ b/public/admin/addacell/addacell.html
@@ -151,8 +151,8 @@
                     <select
                       type="text"
                       placeholder=""
-                      name="LeaderPosition"
-                      id="LeaderPosition"
+                      name="Designation"
+                      id="Designation"
                       required
                     >
                       <option value="NoSelect" hidden>Select an option</option>
@@ -162,7 +162,7 @@
                       <option value="SENIOR-CELL">SENIOR-CELL LEADER</option>
                       <option value="CELL">CELL LEADER</option>
                     </select>
-                    <label for="LeaderPosition">Leader Position</label>
+                    <label for="Designation">Designation</label>
                   </div>
                   <div class="form-group">
                     <select
