--- a/public/admin/overview/overview.html
+++ b/public/admin/overview/overview.html
@@ -233,7 +233,7 @@
                       <tr>
                         <th>Name Of Leader</th>
                         <th>Cell</th>
-                        <th>Position</th>
+                        <th>Designation</th>
                         <th>Date</th>
                       </tr>
                     </thead>
