--- a/public/admin/view-cell-leaders/view-cells-leaders.html
+++ b/public/admin/view-cell-leaders/view-cells-leaders.html
@@ -32,10 +32,10 @@
               <label for="PhoneNumber">Phone Number</label>
             </div>
             <div class="form-group">
-              <select type="text" placeholder="" name="LeaderPosition" id="LeaderPosition" required>
+              <select type="text" placeholder="" name="Designation" id="Designation" required>
                 <!-- Populated from script -->
               </select>
-              <label for="LeaderPosition">Leader Position</label>
+              <label for="Designation">Designation</label>
             </div>
             <div class="form-group">
               <select type="text" placeholder="" name="CellType" id="CellType" required>
@@ -200,8 +200,8 @@
                         <option value="NameOfSeniorCell,desc">SeniorCell Name(Descending)</option>
                         <option value="NameOfCell,asc">Cell Name(Ascending)</option>
                         <option value="NameOfCell,desc">Cell Name(Descending)</option>
-                        <option value="LeaderPosition,asc">LeaderPosition (Ascending)</option>
-                        <option value="LeaderPosition,desc">LeaderPosition (Descending)</option>
+                        <option value="Designation,asc">Designation (Ascending)</option>
+                        <option value="Designation,desc">Designation (Descending)</option>
                       </select>
                       <button title="re-arrange" type="button" id="sortBtn">
                         <svg class="sortVg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#454746"><path d="M360-440q-17 0-28.5-11.5T320-480v-247l-75 75q-11 11-27.5 11T189-652q-12-12-12-28.5t12-28.5l143-143q6-6 13-8.5t15-2.5q8 0 15 2.5t13 8.5l144 144q12 12 11.5 28T531-652q-12 11-28 11.5T475-652l-75-75v247q0 17-11.5 28.5T360-440ZM600-97q-8 0-15-2.5t-13-8.5L428-252q-12-12-11.5-28t12.5-28q12-11 28-11.5t28 11.5l75 75v-247q0-17 11.5-28.5T600-520q17 0 28.5 11.5T640-480v247l75-75q11-11 27.5-11t28.5 11q12 12 12 28.5T771-251L628-108q-6 6-13 8.5T600-97Z"/></svg>
@@ -230,7 +230,7 @@
                       <th>SN</th>
                       <th>Name Of Leader</th>
                       <th>Phone Number</th>
-                      <th>Position</th>
+                      <th>Designation</th>
                       <th>Pcf</th>
                       <th>Senior Cell</th>
                       <th>Cell</th>
