--- a/public/dashboard/edit-profile/edit-profile.html
+++ b/public/dashboard/edit-profile/edit-profile.html
@@ -124,7 +124,7 @@
                   <label for="zone">Zone</label>
                 </div>
                 <div class="form-group">
-                  <select type="text" placeholder="" name="LeadershipPosition" id="LeadershipPosition">
+                  <select type="text" placeholder="" name="Designation" id="Designation">
                     <option value="noselect" hidden></option>
                     <option value="" hidden>Choose an option</option>
                     <option value="PCF-leader">PCF Leader</option>
@@ -135,7 +135,7 @@
                     <option value="Haven-Govenor">Haven Governor</option>
                     <option value="Member">Member</option>
                   </select>
-                  <label for="LeadershipPosition">Leadership Positon</label>
+                  <label for="Designation">Designation</label>
                 </div>
                 <!-- change the select to a div -->
                 <div class="form-group hidden" id="pcfnamegroup">
