--- a/public/admin/view-cell-reports/view-cell-reports.html
+++ b/public/admin/view-cell-reports/view-cell-reports.html
@@ -23,9 +23,7 @@
     <link rel="stylesheet" href="../../root.css" />
   </head>
   <body>
-    <div id="toastBox">
-      
-    </div>
+    <div id="toastBox"></div>
     <main class="sub-body">
       <div class="hidden reports-parent">
         <div class="reports-wrapper">
@@ -141,7 +139,7 @@
                 <i class="fa-duotone fa-solid fa-arrow-left"></i>
                 <!-- <i class="fa-duotone fa-solid fa-house"></i> -->
               </a>
-              <h1>Cell reports</h1>
+              <h1>Cell Reports</h1>
             </div>
             <div class="empty-div"></div>
             <div class="overview">
