--- a/public/admin/view-users/view-users.html
+++ b/public/admin/view-users/view-users.html
@@ -229,7 +229,7 @@
                         <th>Email</th>
                         <th>Phone Number</th>
                         <th>Church</th>
-                        <th>Leaders Position</th>
+                        <th>Designation</th>
                         <th>Cell</th>
                         <th>Department</th>
                         <th>Date Registered</th>
